--- a/listaOrdenadaENaoOrdenada/listacafe.html
+++ b/listaOrdenadaENaoOrdenada/listacafe.html
@@ -8,7 +8,12 @@
   <body>
     <h1>Lista de como preparar cafe</h1>
     <ol>
-      <li>oi</li>
+      <li>pegue o cafe</li>
+      <li>pega xicara</li>
+      <li>coloque cafe na xicara</li>
+      <li>coloque leite</li>
+      <li>misture</li>
+      <li>sirva-se</li>
     </ol>
   </body>
 </html>
