--- a/exerciciosTabelas/restaurante.html
+++ b/exerciciosTabelas/restaurante.html
@@ -6,7 +6,7 @@
     <title>Preço Restaurante</title>
   </head>
   <body>
-    <table>
+    <table border="1">
       <tr>
         <th>Pratos</th>
         <th>Descrição</th>
